--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,5 +1,5 @@
 .home{
-    background-color: aliceblue;
+    background-color: rgb(14, 14, 14);
     display: flex;
     flex-direction: column;
     width: 100vw;
@@ -7,4 +7,6 @@
 }
 .home_feed{
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
