--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -4,9 +4,13 @@
     justify-content: space-between;
     width: 100%;
     padding: 10px 0px;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    background-color: black;
 }
 .header_left > img {
-    width: 70px;
+    width: 50px;
 }
 .header_left{
     display: flex;
@@ -19,7 +23,7 @@
     border-radius: 10px;
     outline: none;
     border: 0.1px solid transparent;
-    background-color: rgba(124, 124, 124, 0.438);
+    background-color: #1b2730;
     color: rgb(230, 230, 230);
 }
 .header_left >input::placeholder{
@@ -35,7 +39,7 @@
     margin-right: 30px;
 }
 .header_profile{
-    background-color: rgba(124, 124, 124, 0.438);
+    background-color: #1b2730;
     padding: 5px 10px;
     border-radius: 20px;
     margin-right: 10px;
@@ -48,4 +52,5 @@
 .header_rightProfile{
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
