--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,12 +1,11 @@
 .home{
-    background-color: rgb(14, 14, 14);
+    background-color: black;
     display: flex;
     flex-direction: column;
-    width: 100vw;
     padding: 0 40px;
 }
 .home_feed{
     display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
+    margin-top: 20px;
 }
