--- a/src/components/feed/Feed.css
+++ b/src/components/feed/Feed.css
@@ -1,3 +1,44 @@
 .feed{
-    flex: 0.4;
+    flex: 0.5;
+    margin: 60px 10px;
+}
+.feed_icons{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 10px;
+    padding-left: 44px;
+}
+.feed_top{
+    width: 100%;
+    background-color: #1b2730;
+    padding: 10px 15px;
+    padding-right: 30px;
+    border-radius: 10px;
+}
+.feed_input{
+    display: flex;
+}
+form{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+form > input {
+    width: 100%;
+    margin-left: 6px;
+    padding: 10px 15px;
+    border: none;
+    outline: none;
+    border-radius: 7px;
+    margin-top: 5px;
+    background-color: #28343e;
+    color: white;
+}
+form > input::placeholder{
+    color: white;
+}
+form > button{
+    display: none;
 }
