--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -1,6 +1,9 @@
 .profile{
-    flex: 0.2;
+    flex: 0.25;
     margin-bottom: 20px;
+    position: sticky;
+    top: 80px;
+    height: 100%;
 }
 .profile_top{
     display: flex;
