--- a/src/components/profile/follow/Follow.css
+++ b/src/components/profile/follow/Follow.css
@@ -23,7 +23,7 @@
     flex: 1;
 }
 .name_name{
-    font-size: 16px;
+    font-size: 14px;
 }
 .bottom_button{
     margin-top: 10px;
@@ -34,9 +34,13 @@
     padding-left: 5px;
 }
 .bottom_follow > button {
-    padding: 8px 18px;
+    padding: 5px 14px;
     border: none;
     outline: none;
     border-radius: 20px;
     cursor: pointer;
+}
+.name_username{
+    color: rgb(175, 175, 175);
+    font-size: 12px;
 }
