--- a/src/components/trending/Trending.css
+++ b/src/components/trending/Trending.css
@@ -1,3 +1,47 @@
 .trending{
     flex: 0.25;
+    margin-bottom: 20px;
+    position: sticky;
+    top: 80px;
+    height: 100%;
+    background-color: #1b2730;
+    padding: 14px;
+    border-radius: 10px;
+}
+.trending_top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.trendingChild{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+.hastag{
+    font-size: 14px;
+    font-weight: 600;
+}
+.hastag_number{
+    font-size: 12px;
+    color: rgb(175, 175, 175);
+    margin-top: 5px;
+}
+.trending_heading {
+    color: rgb(175, 175, 175);
+    font-size: 14px;
+    margin-top: 20px;
+    letter-spacing: 2px;
+}
+.trending_footer{
+    margin-top: 20px;
+    font-size: 12px;
+    font-weight: 400;
+    color: #1DA1F2;
+    cursor: pointer;
+}
+.trending_top{
+    font-size: 16px;
+    font-weight: 600;
 }
